error.txt
In file included from main.cpp:5:
matrix.h: In member function ‘vector<T>& vector<T>::init(std::initializer_list<int>)’:
matrix.h:43:22: error: no match for ‘operator[]’ (operand types are ‘std::initializer_list<int>’ and ‘int’)
   43 |    data[i].init(sizes[i]);
      |                      ^
In file included from main.cpp:7:
net.h: In constructor ‘net::net(int, std::initializer_list<int>)’:
net.h:21:26: error: call of overloaded ‘init(int&, std::initializer_list<int>&)’ is ambiguous
   21 |   b.init(nlayers, _layers);
      |                          ^
In file included from main.cpp:5:
matrix.h:48:13: note: candidate: ‘vector<T>& vector<T>::init(int, vector<int>) [with T = vector<double>]’
   48 |  vector<T>& init(int _n, vector<int> sizes){
      |             ^~~~
matrix.h:53:13: note: candidate: ‘vector<T>& vector<T>::init(int, T) [with T = vector<double>]’
   53 |  vector<T>& init(int _n, T copy){
      |             ^~~~
matrix.h: In instantiation of ‘vector<T>& vector<T>::init(std::initializer_list<int>) [with T = int]’:
matrix.h:19:3:   required from ‘vector<T>::vector(std::initializer_list<int>) [with T = int]’
net.h:19:27:   required from here
matrix.h:43:12: error: request for member ‘init’ in ‘*(((vector<int>*)this)->vector<int>::data + ((sizetype)(((long unsigned int)i) * 4)))’, which is of non-class type ‘int’
   43 |    data[i].init(sizes[i]);
      |    ~~~~~~~~^~~~
